fix: improper rendering on mobiles

--- a/css/band.css
+++ b/css/band.css
@@ -32,6 +32,8 @@ iframe {
 .navbar {
   background:#080c19;
   margin-bottom: 0px!important;
+  margin-left: 0px!important;
+  margin-right: 0px!important;
 }
 .navbar .nav>li>a {
   color:#FFF;
@@ -324,8 +326,6 @@ li.social a > span {
   .jumbotron {
     padding:20px 20px;
     margin-top:-20px;
-    margin-right:-20px;
-    margin-left:-20px;
     height:auto;
   }
   .masthead {
@@ -341,8 +341,6 @@ li.social a > span {
   .footer {
     padding:20px 20px;
     margin-bottom:-20px;
-    margin-right:-20px;
-    margin-left:-20px;
   }
 }
 @media (max-width: 480px)  {
@@ -361,6 +359,9 @@ li.social a > span {
   }
   .hero-unit h1 {
     font-size:42px;
+  }
+  .fancy span:before,.fancy span:after {
+    display:none;
   }
 }
 .scrollup {
